--- a/src/app/components/lista-de-contatos/lista-de-contatos.component.html
+++ b/src/app/components/lista-de-contatos/lista-de-contatos.component.html
@@ -1,3 +1,3 @@
 <main>
-    <app-contato *ngFor="let contato of contatos"></app-contato>
+    <app-contato *ngFor="let cont of contatos" [registro]="cont"></app-contato>
 </main>
