--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-menu></app-menu>
+<app-menu (onAddContatoClick)="abrir()"></app-menu>
 <app-lista-de-contatos></app-lista-de-contatos>
+<app-create-contato (onCancelClick)="fechar()" *ngIf="mostrandoModal"></app-create-contato>
