--- a/src/styles.css
+++ b/src/styles.css
@@ -40,7 +40,8 @@ form label{
 
 input[type=text],
 input[type=email],
-input[type=password]{
+input[type=password],
+input[type=tel]{
     padding: 5px;
     font-size: 1rem;
     border: 2px solid rgba(0,0,0,0);
@@ -49,7 +50,8 @@ input[type=password]{
 
 input[type=text]:focus,
 input[type=email]:focus,
-input[type=password]:focus{
+input[type=password]:focus,
+input[type=tel]:focus{
     outline: none;
     border: 2px solid rgb(60, 0, 200);
     background-color: rgba(256,256,256,1);
