--- a/src/app/components/create-contato/create-contato.component.html
+++ b/src/app/components/create-contato/create-contato.component.html
@@ -12,22 +12,18 @@
       Telefone:
         <div *ngFor="let tel of novoContato.telefones; let i = index; trackBy: track">
             <input type="tel" name="telefone_{{i}}" [(ngModel)]="novoContato.telefones[i]">
-            <a *ngIf="i==0"><i class="material-icons">add_circle</i></a>
-            <a *ngIf="i!=0" class="remove"><i class="material-icons">remove_circle</i></a>
+            <a *ngIf="i==0" (click)="addTelefone()"><i class="material-icons">add_circle</i></a>
+            <a *ngIf="i!=0" (click)="removeTelefone(i)" class="remove"><i class="material-icons">remove_circle</i></a>
         </div>
       <!-- <div>
-        <input type="email" name="email" id="email">
-            <a class="remove"><i class="material-icons">remove_circle</i></a>
-        </div>
-        <div>
             <input type="email" name="email" id="email">
             <a class="remove"><i class="material-icons">remove_circle</i></a>
         </div> -->
-        <pre>{{novoContato|json}}</pre>
+        <!-- <pre>{{novoContato|json}}</pre> -->
     </label>
     <div class="controles">
       <button (click)="fecharModalClick()" type="button" class="link">Cancelar</button>
-      <button type="button">Adicionar</button>
+      <button (click)="salvar()" type="submit">Adicionar</button>
     </div>
   </form>
 </div>
